apps/lnd/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: lnd

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lnd
  template:
    metadata:
      labels:
        app: lnd
    spec:
      containers:
      - name: lnd
        image: registry.liv.io/liv/lnd
        workingDir: /
        ports:
        - name: lnd-network
          containerPort: 9735
          protocol: TCP
        - name: lnd-rest
          containerPort: 8080
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - CAP_MKNOD
            - CAP_NET_RAW
            - CAP_AUDIT_WRITE
          privileged: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsGroup: 10000
          runAsUser: 10000
          seLinuxOptions:
            type: spc_t
        volumeMounts:
        - name: lnd-data
          mountPath: /var/local/lnd/data
      imagePullSecrets:
      - name: registry.liv.io
      volumes:
      - name: lnd-data
        persistentVolumeClaim:
          claimName: lnd-pvc
