apps/lnd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: lnd-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "myresolver"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - lnd.liv.io
  rules:
  - host: lnd.liv.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lnd
            port:
              number: 8080
